tests/negative/runtime/glyphat_out_of_bounds/input.ci
void main() {
    print(glyphAt("é", 2));
}
